# scMetabolism

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: installation.md
examples/: basic_usage.py
scmetabolism/: __init__.py  aucell.py  cli.py  config.py  core.py  go_analysis.py  performance.py  quality_control.py  utils.py  visualization.py
tests/: test_core.py
